2010-02-10  Chris Morley

	* src/formats/mdlformat.cpp: allow numbers to be other than right
	justified. (As provided by Craig.)

2010-02-08  Noel O'Boyle

	* src/formats/inchiformat.cpp, smilesformat.cpp, xml/cmlformat.cpp:
	Removal of references to strstream (legacy from GCC 2.x).

2010-02-07  Noel O'Boyle

	* src/builder.h, cpp: Make things easier by referring to unsigned long
	instead of OBStereo::Ref. Fixes problem compiling Python bindings.

2010-02-06  Noel O'Boyle

	* src/builder.cpp: IsSpiroAtom assumed that Ids were preserved on
	copying a molecule. Not true.

2010-01-26  Chris Morley

	* src/formats/MNAformat.cpp: added new format from Jeremy Murphy
	* src/formats/CMakeLists.txt,
	  windowsOBF/OBUtilFormats/OBUtilFormats.vcproj: build files

2009-12-15  Noel O'Boyle

	* src/formats/smilesformat.cpp: Create OBPairData of "SMILES Atom
	Order" whenever creating a SMILES string (not just for canonical
	SMILES). Set to "local" so that it won't be written out to an SDF
	file.

2009-12-15  Chris Morley

	* include/openbabel/parsmart.h, src/parsmart.cpp: add support for
	$ as quadruple bond to SMARTS. (Already in SMILES.)
	
	* src/bond.cpp: reset OB_KTRIPLE_BOND, etc when changing bond order.
	Fixes corruption of isonitriles in #2913204

	* src/formats/fastsearchformat.cpp: adjust application of 
	ConvertDativeBonds() to fix #2913204

2009-12-14  Noel O'Boyle

	* src/GUI/OBGUI.cpp: Fix compilation on Linux.

2009-12-11  Chris Morley

	* include/openbabel/plugin.h, src/plugin.cpp: Make TypeID() virtual in
	base class. Move definitions of	BaseFindType and GetPlugin() to cpp file
	and make GetPlugin search all plugin types for an ID.
	 
	* tools/babel.cpp, tools/obabel.cpp: now get verbose description of any
	plugin with e.g. -L gen3D
	
	* src/GUI/OBGUI.cpp: above facility from the menu.	

2009-12-04  Chris Morley

	* src/formats/gaussformat.cpp: Rotational constants were sometimes
	being missed because of a warning message.
